CSS changes to prevent overview event type select dropdown menu from being hidden - Removed overflow:hidden from .group__body and adjusted definition list spacing to maintain existing title spacing - Apply .group__graphs class to set overflow:hidden - Set max-height and scroll to .co-type-selector .dropdown-menu to reduce page scroll and allow Events box to remain in view. Fixes https://jira.coreos.com/browse/CONSOLE-370

--- a/frontend/public/components/_cluster-overview.scss
+++ b/frontend/public/components/_cluster-overview.scss
@@ -17,6 +17,9 @@
   border-top: none;
   padding-left: ($grid-gutter-width / 2);
   padding-right: ($grid-gutter-width / 2);
+}
+
+.group__graphs {
   overflow: hidden;
 }
 
